add some ability to the librarian